made some fixes